--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "godotTools.editorPath.godot4": "c:\\Users\\snava\\Documents\\Godot v4.6\\Godot_v4.6-stable_win64.exe"
+    "godotTools.editorPath.godot4": "s:\\Cerjio\\GODOT\\Godot_v4.6-stable_win64.exe"
 }
